fixed header z-index + added notes components

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -11,6 +11,7 @@ header {
 	top: 0;
 	// box-shadow: $shadow-level-2;
 	border-bottom: 2px solid $divider;
+	z-index: 50;
 
 	@media screen and (max-width: $phone) {
 		height: 48px;
